@@ -1,1 +1,2 @@
-Create and Delete Category methods
+Change flashed message
+    Change the formation of the message depending on the event.
